; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Memory.c_ReadBufFromBuf.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Memory.c_ReadBufFromBuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ReadBufFromBuf(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %34

11:                                               ; preds = %2
  %12 = load i32, i32* %5, align 4
  %13 = call i32* @Malloc(i32 %12)
  store i32* %13, i32** %7, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @ReadBuf(i32* %14, i32* %15, i32 %16)
  %18 = load i32, i32* %5, align 4
  %19 = icmp ne i32 %17, %18
  br i1 %19, label %20, label %23

20:                                               ; preds = %11
  %21 = load i32*, i32** %7, align 8
  %22 = call i32 @Free(i32* %21)
  store i32* null, i32** %3, align 8
  br label %34

23:                                               ; preds = %11
  %24 = call i32* (...) @NewBuf()
  store i32* %24, i32** %6, align 8
  %25 = load i32*, i32** %6, align 8
  %26 = load i32*, i32** %7, align 8
  %27 = load i32, i32* %5, align 4
  %28 = call i32 @WriteBuf(i32* %25, i32* %26, i32 %27)
  %29 = load i32*, i32** %6, align 8
  %30 = call i32 @SeekBuf(i32* %29, i32 0, i32 0)
  %31 = load i32*, i32** %7, align 8
  %32 = call i32 @Free(i32* %31)
  %33 = load i32*, i32** %6, align 8
  store i32* %33, i32** %3, align 8
  br label %34

34:                                               ; preds = %23, %20, %10
  %35 = load i32*, i32** %3, align 8
  ret i32* %35
}

declare dso_local i32* @Malloc(i32) #1

declare dso_local i32 @ReadBuf(i32*, i32*, i32) #1

declare dso_local i32 @Free(i32*) #1

declare dso_local i32* @NewBuf(...) #1

declare dso_local i32 @WriteBuf(i32*, i32*, i32) #1

declare dso_local i32 @SeekBuf(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
